DOC-12651: Convert Analytics REST API references to use OpenAPI generator (#284)
Fixup links in transcluded REST API content

--- a/modules/n1ql/pages/n1ql-manage/query-settings.adoc
+++ b/modules/n1ql/pages/n1ql-manage/query-settings.adoc
@@ -2,6 +2,7 @@
 :description: You can configure the Query service using cluster-level query settings, node-level query settings, and request-level query parameters.
 :page-aliases: manage:manage-settings/query-settings, settings:query-settings
 :page-partial:
+:alt-markdown-links:
 
 // External cross-references
 :rest-cluster-query-settings: xref:n1ql-rest-settings:index.adoc
