DOC-12651: Convert Analytics REST API references to use OpenAPI generator (#284)
Fixup links in transcluded REST API content

--- a/modules/n1ql/pages/n1ql-manage/query-settings.adoc
+++ b/modules/n1ql/pages/n1ql-manage/query-settings.adoc
@@ -1,6 +1,7 @@
 = Configure Queries
 :description: You can configure the Query service using request-level query parameters.
 :page-partial:
+:alt-markdown-links:
 
 // External cross-references
 :rest-cluster-query-settings: xref:rest-api:rest-cluster-query-settings.adoc
