[DOC-12609]: Document the extension to vector syntax to support pre filtering: MB-62230 (#285)
* [DOC-12609]: Document the extension to vector syntax to support pre filtering: MB-62230

* [DOC-12609]: Document the extension to vector syntax to support pre filtering: MB-62230

Fleshing out the text following review.
Tidied up the advantages list.

* [DOC-12609]: Document the extension to vector syntax to support pre-filtering: MB-62230

Fixups following review.

--- a/modules/vector-search/partials/nav.adoc
+++ b/modules/vector-search/partials/nav.adoc
@@ -1,6 +1,7 @@
 * xref:7.6@server:vector-search:vector-search.adoc[]
 ** xref:7.6@server:vector-search:create-vector-search-index-ui.adoc[]
 ** xref:7.6@server:vector-search:create-vector-search-index-rest-api.adoc[]
+** xref:7.6@server:vector-search:pre-filtering-vector-search.adoc[]
 ** xref:7.6@server:vector-search:run-vector-search-ui.adoc[]
 ** xref:7.6@server:vector-search:run-vector-search-rest-api.adoc[]
 ** xref:7.6@server:vector-search:run-vector-search-sdk.adoc[]
