DOC-12650: Convert N1QL REST API references to use OpenAPI generator (#278)
* Update links to Query Admin REST API
* Update links to Query Service REST API
* Update links to Functions REST API
* Run update statistics via the cbq shell
* Update inline CSS
* Update includes from Query Admin and Query Service REST APIs

--- a/modules/indexes/pages/query-without-index.adoc
+++ b/modules/indexes/pages/query-without-index.adoc
@@ -321,7 +321,7 @@ You can get or set the N1QL Feature Controller setting in any of the following w
 
 |REST API
 |Node-level
-|xref:n1ql:n1ql-rest-api/admin.adoc#_settings_resource[Query Admin REST API: Settings Endpoint]
+|xref:n1ql-rest-admin:index.adoc#tag-Settings[Query Admin REST API: Settings Endpoint]
 |`n1ql-feat-ctrl`
 |===
 
