--- a/modules/n1ql/pages/n1ql-intro/cbq.adoc
+++ b/modules/n1ql/pages/n1ql-intro/cbq.adoc
@@ -526,7 +526,7 @@ In this example, `<USER2>` and `<PASSWORD2>` are alternative credentials with ac
 --
 ====
 
-For more information about using multiple credentials, see xref:n1ql:n1ql-rest-api/index.adoc#creds[Query Service REST API] and xref:n1ql:n1ql-rest-api/exauthrequest.adoc[].
+For more information about using multiple credentials, see xref:n1ql-rest-query:index.adoc#creds[Query Service REST API] and xref:n1ql:n1ql-rest-api/exauthrequest.adoc[].
 
 === Displaying the Credentials
 
@@ -1361,6 +1361,7 @@ $
 ----
 ====
 
+[#executing-a-script]
 == Executing a Script
 
 You can use the [.param]`--script` option to start cbq, execute a single {sqlpp} query, and exit the shell.
