--- a/modules/n1ql/pages/n1ql-language-reference/transactions.adoc
+++ b/modules/n1ql/pages/n1ql-language-reference/transactions.adoc
@@ -27,7 +27,7 @@
 // Tools cross-references
 :query-workbench: xref:tools:query-workbench.adoc
 :cbq-shell: xref:n1ql:n1ql-intro/cbq.adoc
-:n1ql-rest-api: xref:n1ql:n1ql-rest-api/index.adoc
+:n1ql-rest-api: xref:n1ql-rest-query:index.adoc
 
 // Settings cross-references
 :txid: xref:n1ql:n1ql-manage/query-settings.adoc#txid
