--- a/modules/n1ql/pages/n1ql-manage/monitoring-n1ql-query.adoc
+++ b/modules/n1ql/pages/n1ql-manage/monitoring-n1ql-query.adoc
@@ -116,7 +116,7 @@ Getting system vitals, as described in <<sys-vitals-get>>, returns results simil
 ----
 ====
 
-For field names and meanings, see xref:n1ql:n1ql-rest-api/admin.adoc#_vitals[Vitals].
+For field names and meanings, see xref:n1ql-rest-admin:index.adoc#Vitals[Vital Statistics].
 
 [#sys-active-req]
 == Monitor and Manage Active Requests
@@ -253,7 +253,7 @@ Getting active requests, as described in <<sys-active-get>>, returns results sim
 ----
 ====
 
-For field names and meanings, see xref:n1ql:n1ql-rest-api/admin.adoc#_requests[Requests].
+For field names and meanings, see xref:n1ql-rest-admin:index.adoc#Requests[Requests].
 
 For query plan field names and meanings, see <<monitor-profile-details>>.
 
@@ -476,7 +476,7 @@ In this example, the names of the prepared statements are identical, but they ar
 <.> The name of the prepared statement showing the associated query context
 ====
 
-For field names and meanings, see xref:n1ql:n1ql-rest-api/admin.adoc#_statements[Statements].
+For field names and meanings, see xref:n1ql-rest-admin:index.adoc#Statements[Prepared Statements].
 
 For query plan field names and meanings, see <<monitor-profile-details>>.
 
@@ -685,7 +685,7 @@ Getting completed requests, as described in <<sys-completed-get>>, returns resul
 ----
 ====
 
-For field names and meanings, see xref:n1ql:n1ql-rest-api/admin.adoc#_requests[Requests].
+For field names and meanings, see xref:n1ql-rest-admin:index.adoc#Requests[Requests].
 
 For query plan field names and meanings, see <<monitor-profile-details>>.
 
@@ -718,7 +718,7 @@ A completed request is logged if _any_ of the qualifiers are met (logical OR).
 `user`:: Log requests with this user name.
 `context`:: Log requests with this client context ID.
 
-For full details, see xref:n1ql:n1ql-rest-api/admin.adoc#_logging_parameters[Logging parameters].
+For full details, see xref:n1ql-rest-admin:index.adoc#Logging_Parameters[Logging Parameters].
 
 The basic syntax adds a qualifier to the logging parameters, i.e. any existing qualifiers are not removed.
 You can change the value of a logging qualifier by specifying the same qualifier again with a new value.
@@ -839,7 +839,7 @@ For more information about Query settings and parameters, see xref:n1ql:n1ql-man
 [#enable-settings-for-a-query-engine]
 === Enable Query Profiling for a Query Node
 
-To activate query profiling at the node level, specify the `profile` setting using the xref:n1ql:n1ql-rest-api/admin.adoc[Admin REST API] (`/admin/settings` endpoint).
+To activate query profiling at the node level, specify the `profile` setting using the xref:n1ql-rest-admin:index.adoc[Admin REST API] (`/admin/settings` endpoint).
 
 .See the current node-level query settings
 ====
@@ -916,7 +916,7 @@ curl $BASE_URL/admin/settings -u $USER:$PASSWORD \
 
 To activate profiling at the request level, you can:
 
-* Specify the `profile` setting using the xref:n1ql:n1ql-rest-api/index.adoc[Query REST API] (`/query/service` endpoint).
+* Specify the `profile` setting using the xref:n1ql-rest-query:index.adoc[Query REST API] (`/query/service` endpoint).
 * Specify the `profile` setting using the xref:n1ql:n1ql-intro/cbq.adoc[cbq] command line tool.
 
 [tabs]
@@ -1209,7 +1209,7 @@ If you are using the cbq shell or the Query REST API, the following statistics a
 ----
 ====
 
-For field names and meanings, see xref:n1ql:n1ql-rest-api/index.adoc#_profile[Profile].
+For field names and meanings, see xref:n1ql-rest-query:index.adoc#Profile[Profile].
 
 [[plan]]
 === Profiling Details in System Catalogs
@@ -1357,7 +1357,7 @@ Getting the plan for a statement that you ran when the profile was set to `timin
 ----
 ====
 
-For field names and meanings, see xref:n1ql:n1ql-rest-api/index.adoc#_execution_timings[Execution Timings].
+For field names and meanings, see xref:n1ql-rest-query:index.adoc#Execution_Timings[Execution Timings].
 
 == Query Profiling Summary
 
