--- a/modules/guides/pages/prep-statements.adoc
+++ b/modules/guides/pages/prep-statements.adoc
@@ -547,7 +547,7 @@ Overview:
 Reference:
 
 * xref:n1ql:n1ql-manage/monitoring-n1ql-query.adoc#sys-prepared[Manage and Monitor Prepared Statements]
-* xref:n1ql:n1ql-rest-api/admin.adoc#_prepared_statements_resource[{sqlpp} Admin REST API for Prepared Statements]
+* xref:n1ql-rest-admin:index.adoc#tag-PreparedStatements[{sqlpp} Admin REST API for Prepared Statements]
 
 Querying with SDKs:
 
