--- a/modules/n1ql/pages/n1ql-language-reference/dropfunction.adoc
+++ b/modules/n1ql/pages/n1ql-language-reference/dropfunction.adoc
@@ -84,7 +84,7 @@ footnote:context[That is, you are dropping a global function, and the function d
 When you drop a user-defined function whose definition is stored in an external library, the external library and function on which the user-defined function depended are not deleted.
 This enables you to create a new user-defined function with a different name, or a different number of parameters, using the same JavaScript library and function.
 
-To change or delete an external library or the external function code, you must use the xref:tools:udfs-ui.adoc[Query Workbench] or the {sqlpp} xref:n1ql-rest-api/functions.adoc[Functions REST API].
+To change or delete an external library or the external function code, you must use the xref:tools:udfs-ui.adoc[Query Workbench] or the {sqlpp} xref:n1ql-rest-functions:index.adoc[Functions REST API].
 
 When you drop a {sqlpp} managed user-defined function, the associated external function code is deleted also.
 
@@ -152,7 +152,7 @@ http://localhost:8093/evaluator/v1/libraries/geohash-js \
 
 * To create user-defined functions, refer to xref:n1ql-language-reference/createfunction.adoc[].
 * To manage user-defined functions in the Query Workbench, see xref:tools:udfs-ui.adoc[].
-* To manage external libraries and external functions, see xref:n1ql-rest-api/functions.adoc[].
+* To manage external libraries and external functions, see xref:n1ql-rest-functions:index.adoc[].
 * To execute a user-defined function, see xref:n1ql-language-reference/execfunction.adoc[].
 * To see the execution plan for a user-defined function, see xref:n1ql-language-reference/explainfunction.adoc[].
 * To include a user-defined function in an expression, see xref:n1ql-language-reference/userfun.adoc[].
