--- a/modules/n1ql/pages/n1ql-language-reference/userfun.adoc
+++ b/modules/n1ql/pages/n1ql-language-reference/userfun.adoc
@@ -188,7 +188,7 @@ At the latitude of the selected hotel, each geohash represents an area of approx
 
 * To create user-defined functions, refer to xref:n1ql-language-reference/createfunction.adoc[].
 * To manage user-defined functions in the Query Workbench, see xref:tools:udfs-ui.adoc[].
-* To manage external libraries and external functions, see xref:n1ql-rest-api/functions.adoc[].
+* To manage external libraries and external functions, see xref:n1ql-rest-functions:index.adoc[].
 * To execute a user-defined function, see xref:n1ql-language-reference/execfunction.adoc[].
 * To see the execution plan for a user-defined function, see xref:n1ql-language-reference/explainfunction.adoc[].
 * To monitor user-defined functions, see xref:n1ql:n1ql-intro/sysinfo.adoc#sys-functions[Monitor Functions].
