[DOC-12051] Clarifying instructions for creating a basic search index. (#293)

--- a/modules/search/pages/create-search-index-ui.adoc
+++ b/modules/search/pages/create-search-index-ui.adoc
@@ -45,12 +45,16 @@ You cannot have 2 indexes with the same name inside the same bucket and scope.
 . In the *Bucket* list, select the bucket where you want to create the index. 
 . Expand *Customize Index*. 
 . (Optional) To create the index on a scope other than `_default`, select *Use non-default scope/collection(s)*.
-.. In the *Scope* list, select the scope where you want to create the index. 
+.. In the *Scope* list, select the scope where you want to create the index.
+.. Under *Mappings*, clear *# default | dynamic*. 
+.. Click btn:[+ Add Type Mapping].
+.. In the *Collection* list, choose the collection where you want to create the index.
+.. Click btn:[OK].
 . Click btn:[Create Index].
 
 == Next Steps 
 
-This basic index includes all documents from the bucket and scope you selected.
+This basic index includes all documents from the bucket, scope, and collection you selected.
 You can run a search against this index, but it's recommended that you customize your index to improve performance and reduce the index size. 
  
 For more information about how to customize an index, see xref:customize-index.adoc[].
