[DOC-12610]: document `nprobe` tweaking (#281)
* [DOC-12610]: Document `nprobe` tweaking

* [DOC=12610]: Moved fine-tuning menu entry.
[DOC=12610]: Moved the stem declaration; wasn't working in the old position.

* [DOC-12610]: Implemented review changes.

[DOC-12610]:
Moved and reworded the sections for clarity.
Adding link to search-index-params.adoc

--- a/modules/search/pages/search-index-params.adoc
+++ b/modules/search/pages/search-index-params.adoc
@@ -1077,7 +1077,7 @@ The child field's type. Can be one of:
 
 For more information about the available field data types, see xref:field-data-types-reference.adoc[].
 
-|vector_index_optimized_for |String |Vector Only a|
+|[#vector-index-optimized-param]#vector_index_optimized_for# |String |Vector Only a|
 
 include::partial$vector-search-field-descriptions.adoc[tag=optimized_for]
 
