--- a/modules/vector-search/partials/nav.adoc
+++ b/modules/vector-search/partials/nav.adoc
@@ -5,3 +5,5 @@
 ** xref:7.6@server:vector-search:run-vector-search-ui.adoc[]
 ** xref:7.6@server:vector-search:run-vector-search-rest-api.adoc[]
 ** xref:7.6@server:vector-search:run-vector-search-sdk.adoc[]
+** xref:7.6@server:vector-search:fine-tune-vector-search.adoc[]
+
