[DOC-12253] Add Search Response Examples (#296)
* [DOC-12253] Add vector search response examples

* [DOC-12253] Adding examples for regular search indexes and updating GeoSpatial/GeoJSON directions to include adding example data + example responses everywhere

--- a/modules/search/pages/create-search-index-rest-api.adoc
+++ b/modules/search/pages/create-search-index-rest-api.adoc
@@ -69,6 +69,16 @@ IMPORTANT: XATTRs mappings are only available in Couchbase Server version 7.6.2 
 
 For more information about the available JSON properties for a Search index, see xref:search-index-params.adoc[].
 
+If the REST API call is successful, the Search Service returns a `200 OK` and the following JSON response:
+
+[source,json]
+----
+include::example$create-search-index-response.json[]
+----
+
+The `"uuid"` is randomly generated for each Search index you create. 
+Your own UUID might not match the value shown in the example.
+
 == Next Steps
 
 After you create a Search index, you can xref:simple-search-rest-api.adoc[] to test your Search index. 
