--- a/modules/search/pages/geo-search-rest-api.adoc
+++ b/modules/search/pages/geo-search-rest-api.adoc
@@ -75,7 +75,25 @@ For example, the following query searches a geospatial field, `geo`, for any loc
 include::example$geospatial-search-query.sh[]
 ---- 
 
+If the REST API call is successful, the Search Service returns a `200 OK`. 
+Using the `landmark` collection, the query can return the following JSON response: 
+
+[source,json]
+----
+include::example$geospatial-search-response.json[]
+----
+
 === Example: GeoJSON Query 
+
+[TIP]
+====
+To run the following example against the `landmark` collection in the `travel-sample` dataset, run the following {sqlpp} query from the xref:tools:query-workbench.adoc[Query Workbench]: 
+
+[source,sqlpp]
+----
+include::example$geospatial-sqlpp-query.sqlpp[]
+----
+====
 
 For example, the following query searches a geospatial field, `geojson`, for any locations within a defined shape with a xref:search-request-params.adoc#geojson-queries-polygon[Polygon GeoJSON Query]:
 
@@ -83,6 +101,14 @@ For example, the following query searches a geospatial field, `geojson`, for any
 ----
 include::example$geospatial-search-query-geojson.sh[]
 ---- 
+
+If the REST API call is successful, the Search Service returns a `200 OK`. 
+Using the `landmark` collection, the query can return the following JSON response: 
+
+[source,json]
+----
+include::example$geojson-search-response.json[]
+----
 
 == Next Steps
 
