--- a/modules/search/pages/simple-search-rest-api.adoc
+++ b/modules/search/pages/simple-search-rest-api.adoc
@@ -61,6 +61,13 @@ include::example$run-search-payload.sh[]
 
 For more information about the available properties for a Search query JSON payload, see xref:search-request-params.adoc[].
 
+If the REST API call is successful, the Search Service returns a `200 OK` and the following JSON response: 
+
+[source,json]
+----
+include::example$run-search-response.json[]
+----
+
 == Next Steps 
 
 If you do not get the search results you were expecting, you can change the JSON payload xref:search-index-params.adoc[for your Search index] or xref:search-request-params.adoc[for your Search query].
