--- a/modules/vector-search/pages/create-vector-search-index-rest-api.adoc
+++ b/modules/vector-search/pages/create-vector-search-index-rest-api.adoc
@@ -70,6 +70,16 @@ NOTE: This sample JSON Vector Search index is the same as the one provided in xr
 
 For more information about all the available JSON properties for a Search index, see xref:search:search-index-params.adoc[].
 
+If the REST API call is successful, the Search Service returns a `200 OK` and the following JSON response:
+
+[source,json]
+----
+include::example$create-vector-search-index-response.json[]
+----
+
+The `"uuid"` is randomly generated for each Search index you create. 
+Your own UUID might not match the value shown in the example.
+
 == Next Steps
 
 After you create a Search index, you can xref:run-vector-search-rest-api.adoc[] to test your Search index. 
