--- a/modules/vector-search/pages/run-vector-search-rest-api.adoc
+++ b/modules/vector-search/pages/run-vector-search-rest-api.adoc
@@ -72,6 +72,13 @@ TIP: For a more complex query, you can copy the `query` object from the example 
 
 For more information about the available properties for a Search query JSON payload, see xref:search:search-request-params.adoc[].
 
+If the REST API call is successful, the Search Service returns a `200 OK` and the following JSON response: 
+
+[source,json]
+----
+include::example$run-vector-search-response.json[]
+----
+
 == Next Steps 
 
 If you do not get the search results you were expecting, you can change the JSON definition xref:search:search-index-params.adoc[for your Search index] or change the parameters xref:search:search-request-params.adoc[for your Search query].
