[DOC-12001] Moving some links around to try and resolve the original complaint. (#294)
* [DOC-12001] Moving some links around to try and resolve the original complaint.

* [DOC-12001] Removing the extra link out after some thought.

--- a/modules/vector-search/pages/create-vector-search-index-ui.adoc
+++ b/modules/vector-search/pages/create-vector-search-index-ui.adoc
@@ -53,12 +53,15 @@ You cannot have 2 indexes with the same name inside the same bucket and scope.
 . Expand *Customize Index*. 
 . Select *Use non-default scope/collection(s)*.
 .. In the *Scope* list, select the scope that contains the documents you want to include in your index.
-. Expand *Mappings* and xref:search:create-type-mapping.adoc[create a new type mapping on a collection]:
+. Expand *Mappings* and create a new type mapping on a collection:
 .. Click btn:[Add Type Mapping].
 .. In the *Collection* list, select the collection that contains the documents you want to include in your index. 
 .. Select *Only index specified fields*. 
 .. Click btn:[OK].
-. xref:search:create-child-field.adoc[] on the new collection type mapping with the following settings: 
+
++
+For more information about how to create type mappings, see xref:search:create-type-mapping.adoc[].
+. Create a child field mapping on the new collection type mapping: 
 .. In the *Field* field, enter the name of the field in your documents that contains your vector embeddings.
 +
 Vectors must be represented as an array of floating point numbers. 
@@ -77,9 +80,10 @@ For more information, see xref:search:child-field-options-reference.adoc[].
 For more information, see xref:search:child-field-options-reference.adoc[].
 .. Select *Index*.
 .. Click btn:[OK].
-. (Optional) xref:search:create-child-field.adoc[Create another child field] on the new collection type mapping for any additional fields you want to return in your search results.
+. (Optional) Create another child field on the new collection type mapping for any additional fields you want to return in your search results.
 +
 For example, you could add the text field that you used to generate your vector embeddings. 
+For more information about how to create child fields, see xref:search:create-child-field.adoc[].
 . Next to the `default` dynamic type mapping, clear the checkbox. 
 . Click btn:[Create Index].
 
