--- a/modules/search/partials/vector-search-field-descriptions.adoc
+++ b/modules/search/partials/vector-search-field-descriptions.adoc
@@ -1,5 +1,5 @@
 // tag::optimized_for[]
-For a `vector` child field, choose whether the Search Service should prioritize recall or latency when returning similar vectors in search results:
+For a `vector` child field, choose whether the Search Service should prioritize recall, latency, or memory efficiency when returning similar vectors in search results:
 
 * *recall*: The Search Service prioritizes returning the most accurate result.
 This may increase resource usage for Search queries.
@@ -11,6 +11,11 @@ This value is calculated by taking the square root of the number of centroids in
 This may reduce the accuracy of results.
 +
 The Search Service uses half the `nprobe` value calculated for *recall* priority. 
+
+* *memory-efficient*: The Search Service prioritizes reducing memory usage and optimizes search operations for less resources.
+This may reduce both accuracy (recall) and latency.
++
+The Search Service uses either an inverted file index with scalar quantization, or a directly mapped index with exact vector comparisons, depending on the number of vectors in your data.
 
 For more information about Vector Search indexes, see xref:vector-search:vector-search.adoc[] or xref:vector-search:create-vector-search-index-ui.adoc[].
 // end::optimized_for[]
