--- a/modules/vector-search/pages/fine-tune-vector-search.adoc
+++ b/modules/vector-search/pages/fine-tune-vector-search.adoc
@@ -119,7 +119,7 @@ If you have a Vector Search index with `vector_index_optimized_for` set to `"rec
 == Fine-Tuning Query Parameters
 
 
-You can add set the values of `ivf_nprobe_pct` and `ivf_max_codes_pct` in your Vector Search queries to tune the recall or accuracy of your search.
+You can set the values of `ivf_nprobe_pct` and `ivf_max_codes_pct` in your Vector Search queries to tune the recall or accuracy of your search.
 
 You can add the following parameters to your query: 
 
